--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -5,12 +5,16 @@ jobs:
     name: 🎉 Deploy
     runs-on: ubuntu-latest
     steps:
-    - name: 🚚 Get latest code
-      uses: actions/checkout@v4
+      - name: 🚚 Get latest code
+        uses: actions/checkout@v4
 
-    - name: 📂 Sync files
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
-      with:
-        server: ${{ secrets.FTP_HOST }}
-        username: ${{ secrets.FTP_USERNAME }}
-        password: ${{ secrets.FTP_PASSWORD }}
+      - name: 📂 Sync files
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+        with:
+          server: ${{ secrets.FTP_HOST }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          timeout: 120000         # Increase timeout to 2 minutes (in milliseconds)
+          protocol: ftp           # Explicitly set protocol (alternatives: ftps, ftps-legacy)
+          port: 21                # Standard FTP port (change if your server uses a different port)
+          log-level: verbose      # Get more detailed logs for troubleshooting
